@@ -1027,8 +1027,9 @@ extern hc_thread_mutex_t mux_display;
 #define SIGNATURE_PHPASS2         "$H$"
 #define SIGNATURE_MD5CRYPT        "$1$"
 #define SIGNATURE_BCRYPT1         "$2a$"
-#define SIGNATURE_BCRYPT2         "$2x$"
-#define SIGNATURE_BCRYPT3         "$2y$"
+#define SIGNATURE_BCRYPT2         "$2b$"
+#define SIGNATURE_BCRYPT3         "$2x$"
+#define SIGNATURE_BCRYPT4         "$2y$"
 #define SIGNATURE_SHA512CRYPT     "$6$"
 #define SIGNATURE_MD5APR1         "$apr1$"
 #define SIGNATURE_MSSQL           "0x0100"
